--- a/landResale.html
+++ b/landResale.html
@@ -50,7 +50,6 @@
               </a>
 
   </div>
-  
   <nav class="navbar navbar-expand-lg navbar-light">
     <a class="navbar-brand" href="index.html">
       <img src="assets/general/logoEzyRealty.jpg" alt="firm logo" id ="logo-image" >
@@ -105,6 +104,7 @@
           </div>		
     </div>
   </nav>
+
 <!-- Hero-->
 
 
@@ -113,14 +113,11 @@
   <div class="fp-background">
   <img src="assets/general/resNewSale.jpg" alt="" style="width: 100%; -webkit-filter: grayscale(900%);
   filter: grayscale(500%);">
-  <h2 class="fp-heading">Residential: <span style="color: #000;">Rental</span></h2>
-  <p class="fp-para">Explore<span style="color:#000"> Rental </span>Properties</p>
+  <h2 class="fp-heading">Land: <span style="color: #000;"> Resale </span></h2>
+  <p class="fp-para">Find your <span style="color:#000">Perfect </span>Property</p>
   </div>
 
-
-<!--Properties rendered from JS-->
-
-<div class="residential-rental">
+<div class="land-resale">
 
   
 
@@ -329,9 +326,9 @@
   </div>
 </footer>
 
-<!-- Add Property Details - SEO -->
+
 
 <script src="script.js"> </script> 
-<script src="residentialRental.js"></script>
+<script src="landResale.js"></script>
 </body>
 </html>                            
