--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
       
       <p style="text-align: left; margin-left:30px; font-weight: 400; font-size: 2.1vw; color: grey;">Let's make your House Hunting <span style="color:black;">EZY!</span></p>
 
-      <p style="text-align: left; margin-left:30px; margin-right:30px;font-weight: 400; font-size: 1.3vw; color: grey;">House hunting, though brimming with excitement, poses a labyrinth of challenges—from fierce competition and fluctuating markets to legal intricacies and negotiation tactics. Navigating this complex landscape demands shrewdness and strategic foresight as individuals strive to find their dream abode amidst a sea of uncertainties. Yet, within these challenges lies the opportunity for prospective homeowners to uncover not just a house, but a place to call home.</p>
+      <p style="text-align: left; margin-left:30px; margin-right:60px;font-weight: 400; font-size: 1.3vw; color: grey; text-align: justify;">House hunting, though brimming with excitement, poses a labyrinth of challenges—from fierce competition and fluctuating markets to legal intricacies and negotiation tactics. Navigating this complex landscape demands shrewdness and strategic foresight as individuals strive to find their dream abode amidst a sea of uncertainties. Yet, within these challenges lies the opportunity for prospective homeowners to uncover not just a house, but a place to call home.</p>
       <a href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/ezyrealty/schedule-your-site-visit?a2=Consultation'});return false;"><button type="button" class="btn btn-dark" style="margin-left: 30px;">Schedule a Consultation Call</button></a>
 
         
@@ -206,9 +206,11 @@
   <div class="container" style="margin-top: 30px;">
     <div class="row">
       <div class="col-sm-4" >
+        <a href="newlyLaunched.html">
         <img src="assets/general/newlylaunched.jpeg" class="sqs-block-image" alt="newlylaunched" style="width:100%; position: relative; -webkit-filter: grayscale(900%);
         filter: grayscale(500%);">
         <h3 style="position: absolute; top:80%; left:8%; font-weight: 700; color:white ">Newly<br> Launched</h3>
+        </a>
       </div>
       <div class="col-sm-4" >
         <img src="assets/general/readytomove.jpeg" class="sqs-block-image" alt="newlylaunched" style="width:100%; position: relative; -webkit-filter: grayscale(900%);
@@ -275,22 +277,34 @@
 </div>
 
 
+<hr>
+<br>
+
 <!--Stats-->
 <div class="stats-container">
   <div class="container">
     <div class="row">
       <div class="col-sm">
-        One of three columns
+        <h4 style="color: grey;">Total Properties</h4>
+        <h2 style="font-weight: 600;">250+</h2>
       </div>
       <div class="col-sm">
-        One of three columns
+        <h4 style="color: grey;">Property Experts</h4>
+        <h2 style="font-weight: 600;">15+</h2>
       </div>
       <div class="col-sm">
-        One of three columns
+        <h4 style="color: grey;">Happy Customers</h4>
+        <h2 style="font-weight: 600;">900+</h2>
+      </div>
+      <div class="col-sm">
+        <h4 style="color: grey;">Developers</h4>
+        <h2 style="font-weight: 600;">400+</h2>
       </div>
     </div>
   </div>
 </div>
+
+<br>
 <!--Testimonials-->
 
 
