--- a/index.html
+++ b/index.html
@@ -170,6 +170,32 @@
 </div>
 
 <hr>
+<br>
+<div class="stats-container">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm">
+        <h4 style="color: grey;">Total Properties</h4>
+        <h2 style="font-weight: 600;">250+</h2>
+      </div>
+      <div class="col-sm">
+        <h4 style="color: grey;">Property Experts</h4>
+        <h2 style="font-weight: 600;">15+</h2>
+      </div>
+      <div class="col-sm">
+        <h4 style="color: grey;">Happy Customers</h4>
+        <h2 style="font-weight: 600;">900+</h2>
+      </div>
+      <div class="col-sm">
+        <h4 style="color: grey;">Developers</h4>
+        <h2 style="font-weight: 600;">400+</h2>
+      </div>
+    </div>
+  </div>
+</div>
+<br>
+<hr>
+
 
 
 <!--About Maybe-->
@@ -183,7 +209,7 @@
     <div class="col">
       <h2 style="text-align: left; margin:30px; font-weight: 600; font-size: 3.3vw;">Hi! I am <br> Mazhar Ahmed :)</h2>
       
-      <p style="text-align: left; margin-left:30px; font-weight: 400; font-size: 2.1vw; color: grey;">Let's make your House Hunting <span style="color:black;">EZY!</span></p>
+      <p style="text-align: left; margin-left:30px; font-weight: 400; font-size: 2.1vw; color: grey;">Let's make your House Hunting <span style="color:black; font-weight: 700;">EZY!</span></p>
 
       <p style="text-align: left; margin-left:30px; margin-right:60px;font-weight: 400; font-size: 1.3vw; color: grey; text-align: justify;">House hunting, though brimming with excitement, poses a labyrinth of challenges—from fierce competition and fluctuating markets to legal intricacies and negotiation tactics. Navigating this complex landscape demands shrewdness and strategic foresight as individuals strive to find their dream abode amidst a sea of uncertainties. Yet, within these challenges lies the opportunity for prospective homeowners to uncover not just a house, but a place to call home.</p>
       <a href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/ezyrealty/schedule-your-site-visit?a2=Consultation'});return false;"><button type="button" class="btn btn-dark" style="margin-left: 30px;">Schedule a Consultation Call</button></a>
@@ -192,6 +218,9 @@
     </div>
   </div>
 </div>
+
+
+
 
 <!--Featured Projects Change to 1. Residential 2. Commercial 3. Plots-->
 <div class="featured-projects">
@@ -206,23 +235,25 @@
   <div class="container" style="margin-top: 30px;">
     <div class="row">
       <div class="col-sm-4" >
-        <a href="newlyLaunched.html">
+        <a href="residentialNewSale.html#new-launch">
         <img src="assets/general/newlylaunched.jpeg" class="sqs-block-image" alt="newlylaunched" style="width:100%; position: relative; -webkit-filter: grayscale(900%);
         filter: grayscale(500%);">
         <h3 style="position: absolute; top:80%; left:8%; font-weight: 700; color:white ">Newly<br> Launched</h3>
         </a>
       </div>
       <div class="col-sm-4" >
+        <a href="residentialNewSale.html#ready-move">
         <img src="assets/general/readytomove.jpeg" class="sqs-block-image" alt="newlylaunched" style="width:100%; position: relative; -webkit-filter: grayscale(900%);
         filter: grayscale(500%);">
         <h3 style="position: absolute; top:80%; left:8%; font-weight: 700; color:white ">Ready to<br> Move in</h3>
-
+          </a>
       </div>
       <div class="col-sm-4" >
+        <a href="residentialNewSale.html#under-constuction">
         <img src="assets/general/underconstruction.jpeg" class="sqs-block-image" alt="newlylaunched" style="width:100%; position: relative; -webkit-filter: grayscale(900%);
         filter: grayscale(500%);">
         <h3 style="position: absolute; top:80%; left:8%; font-weight: 700; color:white ">Under<br>Construction</h3>
-
+          </a>
       </div>
     </div>
   </div>
@@ -277,54 +308,26 @@
 </div>
 
 
-<hr>
+
 <br>
 
 <!--Stats-->
-<div class="stats-container">
-  <div class="container">
-    <div class="row">
-      <div class="col-sm">
-        <h4 style="color: grey;">Total Properties</h4>
-        <h2 style="font-weight: 600;">250+</h2>
-      </div>
-      <div class="col-sm">
-        <h4 style="color: grey;">Property Experts</h4>
-        <h2 style="font-weight: 600;">15+</h2>
-      </div>
-      <div class="col-sm">
-        <h4 style="color: grey;">Happy Customers</h4>
-        <h2 style="font-weight: 600;">900+</h2>
-      </div>
-      <div class="col-sm">
-        <h4 style="color: grey;">Developers</h4>
-        <h2 style="font-weight: 600;">400+</h2>
-      </div>
-    </div>
-  </div>
-</div>
+
 
 <br>
 <!--Testimonials-->
 
 
 <!--Terms and Policies-->
-<div class="terms-conditions">
-<div class="fp-background">
-  <img src="assets/general/terms.jpg" alt="" style="width: 100%; height:23vw; -webkit-filter: grayscale(900%);
-  filter: grayscale(500%);">
-  <h2 class="fp-heading"> <span style="color: #000;"><span style="color: goldenrod;">T</span>erms & <span style="color: goldenrod;">C</span>onditions</span></h2>
-  <p class="fp-para"><span style="color:#000"></span></p>
-  </div>
 
-  <div class="tc-content" style="margin: 3%; text-align: left;">
-    1. Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-    2. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-  
-  </div>
+<hr>
 
+
+<div class="terms">
+  <br>
+  <h2 style="text-align: center;">Terms & Conditions</h2>
+  <p style="margin: 3%; text-align: justify;color: grey;">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</p>
 </div>
-
 
 <!--Footer-->
 
