--- a/residentialNewSale.html
+++ b/residentialNewSale.html
@@ -107,7 +107,7 @@
 <!-- Hero-->
 
 
-<!--Featured Projects Change to 1. Residential 2. Commercial 3. Plots-->
+<!-- Featured Projects Change to 1. Residential 2. Commercial 3. Plots-->
 <div class="featured-projects">
   <div class="fp-background">
   <img src="assets/general/resNewSale.jpg" alt="" style="width: 100%; -webkit-filter: grayscale(900%);
@@ -116,12 +116,38 @@
   <p class="fp-para">Find your <span style="color:#000">Perfect </span>Home</p>
   </div>
 
-<div class="residential-new">
+
+  <div class="newly-launched" id="new-launch">
+
+    <h2 style="text-align: center; margin: 3%;">Newly Launched</h2>
+    <div class="newLaunch">
+
+    </div>
+
+  </div>
+
 
   
 
-</div>
- 
+  <div class="readyMove" id="ready-move">
+
+    <h2 style="text-align: center; margin: 3%;">Ready To Move In</h2>
+    <div class="readyMoveIn">
+      
+    </div>
+
+  </div>
+
+
+  
+  <div class="underCon" id="under-constuction">
+
+    <h2 style="text-align: center; margin: 3%;">Under Construction</h2>
+    <div class="UnderConstruction">
+      
+    </div>
+
+  </div>
 
 
 <!--Footer-->
