--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 <div class="hero-container">
   <img src="assets/general/hero1.jpg" alt="ezyrealty" class="hero-image"/>
   <span class="hero-text">Hard to find the <span style="color:#000;">right</span> property? <br> We make it <span style="color: #000;">EZY</span> 🏠.</span>
-  <button type="button" class="btn btn-dark primarybtn">Explore Properties</button>
+  <a href="residentialNewSale.html#new-launch"><button type="button" class="btn btn-dark primarybtn">Explore Properties</button></a>
   <a href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/ezyrealty/schedule-your-site-visit?a2=Consultation'});return false;"><button type="button" class="btn btn-light secondarybtn">Schedule a Consultation Call</button></a>
 
 </div>
