--- a/residentialNewSale.html
+++ b/residentialNewSale.html
@@ -119,7 +119,7 @@
 
   <div class="newly-launched" id="new-launch">
 
-    <h2 style="text-align: center; margin: 3%;">Newly Launched</h2>
+    <h2 style="text-align: center; margin: 3%; font-weight: 600;">Newly Launched</h2>
     <div class="newLaunch">
 
     </div>
@@ -131,7 +131,7 @@
 
   <div class="readyMove" id="ready-move">
 
-    <h2 style="text-align: center; margin: 3%;">Ready To Move In</h2>
+    <h2 style="text-align: center; margin: 3%; font-weight: 600;">Ready To Move In</h2>
     <div class="readyMoveIn">
       
     </div>
@@ -142,7 +142,7 @@
   
   <div class="underCon" id="under-constuction">
 
-    <h2 style="text-align: center; margin: 3%;">Under Construction</h2>
+    <h2 style="text-align: center; margin: 3%; font-weight: 600;">Under Construction</h2>
     <div class="UnderConstruction">
       
     </div>
