--- a/index.html
+++ b/index.html
@@ -336,9 +336,11 @@
 <hr>
 <footer style="background-color: white;">
   <p style="margin: 3%; color: grey;">© 2024. All Copyright Rights Reserved</p>
+ <a href="career.html"> <p style="margin: 3%; color: grey;">Career @ Ezy Realty</p></a>
   <img src="assets/general/logoEzyRealty.jpg" alt="" style="max-width: 20%; margin-left: auto; margin-right: auto;">
   <div class="contentseo" style="margin: 3%; color: grey; font-size: 12px;">
     <h2 style="font-size: 16px;">Properties/ Real Estate/ Residential/ Commercial/ Lands in Chennai</h2>
+
 
     <hr>
     <p><strong>Central Chennai</strong> - Nungambakkam ○
