--- a/index.html
+++ b/index.html
@@ -171,6 +171,7 @@
 
 <hr>
 <br>
+<!--Statistics-->
 <div class="stats-container">
   <div class="container">
     <div class="row">
@@ -198,7 +199,7 @@
 
 
 
-<!--About Maybe-->
+<!--About-->
 <div class="about-section">
 
   <div class="row">
@@ -222,7 +223,7 @@
 
 
 
-<!--Featured Projects Change to 1. Residential 2. Commercial 3. Plots-->
+<!--Featured Projects-->
 <div class="featured-projects">
   <div class="fp-background">
   <img src="assets/general/fp-back2.jpg" alt="" style="width: 100%; -webkit-filter: grayscale(900%);
@@ -241,13 +242,7 @@
         <h3 style="position: absolute; top:80%; left:8%; font-weight: 700; color:white ">Newly<br> Launched</h3>
         </a>
       </div>
-      <div class="col-sm-4" >
-        <a href="residentialNewSale.html#ready-move">
-        <img src="assets/general/readytomove.jpeg" class="sqs-block-image" alt="newlylaunched" style="width:100%; position: relative; -webkit-filter: grayscale(900%);
-        filter: grayscale(500%);">
-        <h3 style="position: absolute; top:80%; left:8%; font-weight: 700; color:white ">Ready to<br> Move in</h3>
-          </a>
-      </div>
+
       <div class="col-sm-4" >
         <a href="residentialNewSale.html#under-constuction">
         <img src="assets/general/underconstruction.jpeg" class="sqs-block-image" alt="newlylaunched" style="width:100%; position: relative; -webkit-filter: grayscale(900%);
@@ -255,6 +250,14 @@
         <h3 style="position: absolute; top:80%; left:8%; font-weight: 700; color:white ">Under<br>Construction</h3>
           </a>
       </div>
+      <div class="col-sm-4" >
+        <a href="residentialNewSale.html#ready-move">
+        <img src="assets/general/readytomove.jpeg" class="sqs-block-image" alt="newlylaunched" style="width:100%; position: relative; -webkit-filter: grayscale(900%);
+        filter: grayscale(500%);">
+        <h3 style="position: absolute; top:80%; left:8%; font-weight: 700; color:white ">Ready to<br> Move in</h3>
+          </a>
+      </div>
+      
     </div>
   </div>
 
