--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <!-- Calendly link widget end -->
 </head> 
 <body>
+  <div class="wrapper">
   <div class="top-bar">
     <a href="tel://+919176133133" class="top-bar-phone" style="text-decoration: none;"><span class="material-symbols-outlined" style="color: white;">
       phone_forwarded
@@ -570,5 +571,6 @@
 <script src="script.js"> 
   
 </script> 
+</div>
 </body>
 </html>                            
