--- a/index.html
+++ b/index.html
@@ -238,11 +238,11 @@
       filter: grayscale(500%);">
     </div>
     <div class="col-sm-6">
-      <h2 style="text-align: left; margin:30px; font-weight: 600; font-size: 3.3vw;">Hi! I am <br> Mazhar Ahmed :)</h2>
+      <h1 style="text-align: left; margin:30px; font-weight: 600;">Hi! I am <br> Mazhar Ahmed :)</h1>
       
-      <p style="text-align: left; margin-left:30px; font-weight: 400; font-size: 2.1vw; color: grey;">Let's make your House Hunting <span style="color:black; font-weight: 700;">EZY!</span></p>
+      <h4 style="text-align: left; margin-left:30px; font-weight: 400; color: grey;">Let's make your House Hunting <span style="color:black; font-weight: 700;">EZY!</span></h4>
 
-      <p style="text-align: left; margin-left:30px; margin-right:60px;font-weight: 400; font-size: 1.3vw; color: grey; text-align: justify;">House hunting, though brimming with excitement, poses a labyrinth of challenges—from fierce competition and fluctuating markets to legal intricacies and negotiation tactics. Navigating this complex landscape demands shrewdness and strategic foresight as individuals strive to find their dream abode amidst a sea of uncertainties. Yet, within these challenges lies the opportunity for prospective homeowners to uncover not just a house, but a place to call home.</p>
+      <p style="text-align: left; margin-left:30px; margin-right:60px;font-weight: 400;  color: grey; text-align: justify;">House hunting, though brimming with excitement, poses a labyrinth of challenges—from fierce competition and fluctuating markets to legal intricacies and negotiation tactics. Navigating this complex landscape demands shrewdness and strategic foresight as individuals strive to find their dream abode amidst a sea of uncertainties. Yet, within these challenges lies the opportunity for prospective homeowners to uncover not just a house, but a place to call home.</p>
       <a href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/ezyrealty/schedule-your-site-visit?a2=Consultation'});return false;"><button type="button" class="btn btn-dark" style="margin-left: 30px; font-size:1.1vw;" >Schedule a Consultation Call</button></a>
 
         
