--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 <link href="https://calendly.com/assets/external/widget.css" rel="stylesheet">
 <script src="https://calendly.com/assets/external/widget.js" type="text/javascript"></script>
-<!-- Calendly link widget end -->
+
 </head> 
 <body>
   <div class="wrapper">
@@ -359,7 +359,7 @@
 <div class="terms">
   <br>
   <h2 style="text-align: center;">Terms & Conditions</h2>
-  <p style="margin: 3%; text-align: justify;color: grey;">The Ezy Realty website located at https://ezyrealty.in is a copyrighted work belonging to Ezy Realty. Certain features of the Site may be subject to additional guidelines, terms, or rules, which will be posted on the Site in connection with such features.
+  <p style="margin: 2% 6%; text-align: justify;color: grey;">The Ezy Realty website located at https://ezyrealty.in is a copyrighted work belonging to Ezy Realty. Certain features of the Site may be subject to additional guidelines, terms, or rules, which will be posted on the Site in connection with such features.
 
    <br> All such additional terms, guidelines, and rules are incorporated by reference into these Terms.
     
