--- a/landResale.html
+++ b/landResale.html
@@ -111,7 +111,7 @@
 <!--Featured Projects Change to 1. Residential 2. Commercial 3. Plots-->
 <div class="featured-projects">
   <div class="fp-background">
-  <img src="assets/general/resNewSale.jpg" alt="" style="width: 100%; -webkit-filter: grayscale(900%);
+  <img src="assets/general/landHero.jpg" alt="" style="width: 100%; -webkit-filter: grayscale(900%);
   filter: grayscale(500%);">
   <h2 class="fp-heading">Land: <span style="color: #000;"> Resale </span></h2>
   <p class="fp-para">Find your <span style="color:#000">Perfect </span>Property</p>
