--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 <div class="hero-container">
   <img src="assets/general/hero1.jpg" alt="ezyrealty" class="hero-image"/>
   <span class="hero-text">Hard to find the <span style="color:black;">right</span> property? <br> We make it <span style="color: #000;">EZY</span> 🏠.</span>
-  <a href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/ezyrealty/schedule-your-site-visit?a2=Consultation'});return false;"><button type="button" class="btn btn-light secondarybtn" style="font-size:1.1vw;">Schedule a Consultation Call</button></a>
+  <a href="residentialNewSale.html"><button type="button" class="btn btn-light secondarybtn" style="font-size:1.1vw;">Explore Properties</button></a>
 
 </div>
 
