--- a/landNewSale.html
+++ b/landNewSale.html
@@ -101,7 +101,7 @@
   <p class="fp-para">Find your <span style="color:#000">Perfect </span>Spot</p>
   </div>
 
-<div class="land-new">
+<div class="land-new" style="display: flex; margin: 2%">
 
   
 
