--- a/trial.html
+++ b/trial.html
@@ -102,7 +102,53 @@
   </div>
 
 <div class="land-resale" style="display: flex; margin: 2%">
-
+  <div class="row">
+          <div class="col-sm-12 col-md-6 col-lg-4 mb-4">
+            <div class="card" style="width: 100%; margin: auto;">
+                <img src="assets/general/hd3.jpeg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h4 class="card-title">Local Project - 📍 Thiruvallur</h4>
+                    <h6 class="card-text">2400 sq. ft. | East Facing</h6>
+                    <p class="card-text">LandMark</p>
+                    <h6 class="card-text">Starting from Rs. 55 L</h6>
+                    <div class="buttonsprop" style="display: flex; justify-content: space-between;">
+                        <a href="#" class="btn btn-success" style="margin: 1%;">Enquire on Whatsapp</a>
+                        <a href="#" class="btn btn-outline-secondary" style="margin: 1%;">Schedule a Site Visit</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-4 mb-4">
+          <div class="card" style="width: 100%; margin: auto;">
+              <img src="assets/general/hd3.jpeg" class="card-img-top" alt="...">
+              <div class="card-body">
+                  <h4 class="card-title">Local Project - 📍 Thiruvallur</h4>
+                  <h6 class="card-text">2400 sq. ft. | East Facing</h6>
+                  <p class="card-text">LandMark</p>
+                  <h6 class="card-text">Starting from Rs. 55 L</h6>
+                  <div class="buttonsprop" style="display: flex; justify-content: space-between;">
+                      <a href="#" class="btn btn-success" style="margin: 1%;">Enquire on Whatsapp</a>
+                      <a href="#" class="btn btn-outline-secondary" style="margin: 1%;">Schedule a Site Visit</a>
+                  </div>
+              </div>
+          </div>
+      </div>
+        <div class="col-sm-12 col-md-6 col-lg-4 mb-4">
+          <div class="card" style="width: 100%; margin: auto;">
+              <img src="assets/general/hd3.jpeg" class="card-img-top" alt="...">
+              <div class="card-body">
+                  <h4 class="card-title">Local Project - 📍 Thiruvallur</h4>
+                  <h6 class="card-text">2400 sq. ft. | East Facing</h6>
+                  <p class="card-text">LandMark</p>
+                  <h6 class="card-text">Starting from Rs. 55 L</h6>
+                  <div class="buttonsprop" style="display: flex; justify-content: space-between;">
+                      <a href="#" class="btn btn-success" style="margin: 1%;">Enquire on Whatsapp</a>
+                      <a href="#" class="btn btn-outline-secondary" style="margin: 1%;">Schedule a Site Visit</a>
+                  </div>
+              </div>
+          </div>
+        </div>
+  </div>
   
 
 </div>
@@ -338,10 +384,7 @@
   </div>
 </footer>
 
-
-
-
 <script src="script.js"> </script> 
-<script src="landResale.js"></script>
+
 </body>
 </html>                            
