--- a/commercialRental.html
+++ b/commercialRental.html
@@ -100,7 +100,7 @@
   <p class="fp-para">Find your <span style="color:#000">Perfect </span>Property</p>
   </div>
 
-<div class="commercial-rental">
+<div class="commercial-rental" style="display: flex; margin: 2%">
 
   
 
