--- a/residentialRental.html
+++ b/residentialRental.html
@@ -104,7 +104,7 @@
 
 <!--Properties rendered from JS-->
 
-<div class="residential-rental">
+<div class="residential-rental" style="display: flex; margin: 2%">
 
   
 
