--- a/residentialResale.html
+++ b/residentialResale.html
@@ -103,7 +103,7 @@
 
 <!--Properties rendered from JS-->
 
-<div class="residential-resale">
+<div class="residential-resale" style="display: flex; margin: 2%">
 
   
 
