--- a/residentialNewSale.html
+++ b/residentialNewSale.html
@@ -103,7 +103,7 @@
   <div class="readyMove" id="ready-move">
 
     <h2 style="text-align: center; margin: 3%; font-weight: 600;">Ready To Move In</h2>
-    <div class="readyMoveIn">
+    <div class="readyMoveIn" style="display: flex; margin: 2%">
       
     </div>
 
@@ -112,7 +112,7 @@
   <div class="underCon" id="under-constuction">
 
     <h2 style="text-align: center; margin: 3%; font-weight: 600;">Under Construction</h2>
-    <div class="UnderConstruction">
+    <div class="UnderConstruction" style="display: flex; margin: 2%">
       
     </div>
 
@@ -122,7 +122,7 @@
   <div class="newly-launched" id="new-launch">
 
     <h2 style="text-align: center; margin: 3%; font-weight: 600;">Newly Launched</h2>
-    <div class="newLaunch">
+    <div class="newLaunch" style="display: flex; margin: 2%">
 
     </div>
 
